--- a/src/App.css
+++ b/src/App.css
@@ -1,109 +1,257 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-body{
-    background: var(--color-bg);
+body {
+  background: var(--color-bg);
 }
 
-a{
-    color: unset;
-    text-decoration: none;
+a {
+  color: unset;
+  text-decoration: none;
 }
 
-.gradient-bg{
-    /* ff 3.6+ */
-    background:-moz-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+/* Contact Page  */
+.contact-header {
+  display: flex;
+  gap: 2rem;
+}
+.contact-text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact-text h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04rem;
+}
+.contact-text p {
+  font-size: 20px;
+  line-height: 27px;
+  font-family: var(--font-family);
+  margin-top: 1.5rem;
+  color: var(--color-text);
+}
+.contact-text button {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.contact-text button,
+.contact-form button {
+  width: 200px;
+  min-height: 50px;
+  background: #ff4b20;
+  border-radius: 5px;
+  font-family: var(--font-family);
+  font-style: bold;
+  font-size: 20px;
+  line-height: 27px;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  padding: 0 1rem;
+  border: none;
+  margin-top: 2rem;
+}
+.contact-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.contact-form form input,
+.contact-form form textarea {
+  padding: 1rem 2rem;
+  background-color: var(--color-bg);
+  border: none;
+  outline: none;
+  font-family: var(--font-family);
+  color: var(--color-text);
+  font-size: 1rem;
+  font-weight: 600;
+}
+.contact-form form span {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+.contact-form form span p {
+  color: var(--color-text);
+  font-family: var(--font-family);
+  font-size: 1rem;
+}
+.contact-form .checkbox {
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-bg);
+  accent-color: var(--color-bg);
+}
+@media screen and (max-width: 914px) {
+  .contact-header {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 650px) {
+  .contact-text h1 {
+    font-size: 48px;
+    line-height: 60px;
+  }
+  .contact-text p {
+    font-size: 16px;
+    line-height: 24px;
+  }
 
-    /* safari 5.1+,chrome 10+ */
-    background:-webkit-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
-
-    /* opera 11.10+ */
-    background:-o-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
-
-    /* ie 10+ */
-    background:-ms-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
-
-    /* global 92%+ browsers support */
-    background:radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+  .contact-text button {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .contact-form form input,
+  .contact-form form textarea {
+    padding: 1rem;
+  }
 }
 
-.gradient-text{
-    background: var(--gradient-text);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+@media screen and (max-width: 490px) {
+  .contact-text h1 {
+    font-size: 36px;
+    line-height: 48px;
+  }
+  .contact-text p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .contact-text button {
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
-.section-padding{
-    padding: 4rem 6rem;
-}
-.section-margin{
-    margin: 4rem 6rem;
-}
-@media screen and (max-width:700px) {
-    .section-padding {
-        padding: 4rem 64px;
-    }
-    .section-margin{
-        margin: 2rem 64px;
-    }
-}
-@media screen and (max-width:550px) {
-    .section-padding {
-        padding: 4rem 32px;
-    }
-    .section-margin{
-        margin: 2rem 32px;
-    }
+.gradient-bg {
+  /* ff 3.6+ */
+  background: -moz-radial-gradient(
+    circle at 3% 25%,
+    rgba(0, 40, 83, 1) 0%,
+    rgba(4, 12, 24, 1) 100%
+  );
+
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-radial-gradient(
+    circle at 3% 25%,
+    rgba(0, 40, 83, 1) 0%,
+    rgba(4, 12, 24, 1) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-radial-gradient(
+    circle at 3% 25%,
+    rgba(0, 40, 83, 1) 0%,
+    rgba(4, 12, 24, 1) 100%
+  );
+
+  /* ie 10+ */
+  background: -ms-radial-gradient(
+    circle at 3% 25%,
+    rgba(0, 40, 83, 1) 0%,
+    rgba(4, 12, 24, 1) 100%
+  );
+
+  /* global 92%+ browsers support */
+  background: radial-gradient(
+    circle at 3% 25%,
+    rgba(0, 40, 83, 1) 0%,
+    rgba(4, 12, 24, 1) 100%
+  );
 }
 
+.gradient-text {
+  background: var(--gradient-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.section-padding {
+  padding: 4rem 6rem;
+}
+.section-margin {
+  margin: 4rem 6rem;
+}
+@media screen and (max-width: 700px) {
+  .section-padding {
+    padding: 4rem 64px;
+  }
+  .section-margin {
+    margin: 2rem 64px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .section-padding {
+    padding: 4rem 32px;
+  }
+  .section-margin {
+    margin: 2rem 32px;
+  }
+}
 
 .scale-up-center {
-	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-    animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
+    both;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
- @-webkit-keyframes scale-up-center {
-    0% {
-      -webkit-transform: scale(0.5);
-              transform: scale(0.5);
-    }
-    100% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-    }
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
   }
-  @keyframes scale-up-center {
-    0% {
-      -webkit-transform: scale(0.5);
-              transform: scale(0.5);
-    }
-    100% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-    }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
 
-  @media screen and (max-width: 700px){
-    .section_padding{
-        padding: 4rem;
-    }
-    .section_margin{
-        margin: 4rem;
-    }
+@media screen and (max-width: 700px) {
+  .section_padding {
+    padding: 4rem;
   }
+  .section_margin {
+    margin: 4rem;
+  }
+}
 
-  @media screen and (max-width: 500px){
-    .section_padding{
-        padding: 4rem 2rem;
-    }
-    .section_margin{
-        margin: 4rem 2rem;
-    }
+@media screen and (max-width: 500px) {
+  .section_padding {
+    padding: 4rem 2rem;
   }
-  
+  .section_margin {
+    margin: 4rem 2rem;
+  }
+}
