--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,139 +1,139 @@
-.header{
-    display: flex;
+.header {
+  display: flex;
 }
-.header-content{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+.header-content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-right: 5rem;
+}
+.header-content h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04rem;
+}
+.header-content p {
+  font-size: 20px;
+  line-height: 27px;
+  font-family: var(--font-family);
+  margin-top: 1.5rem;
+  color: var(--color-text);
+}
+.header-content-input {
+  width: 100%;
+  margin: 2rem 0 1rem;
+  display: flex;
+}
+.header-content-input input {
+  background: var(--color-footer);
+  border-radius: 5px 0px 0px 5px;
+  font-family: var(--font-family);
+  font-size: 20px;
+  line-height: 27px;
+  /* color: var(--color-footer); */
+  border: 2px solid var(--color-footer);
+  padding: 0 1rem;
+  outline: none;
+  color: #fff;
+  flex: 2;
+  min-height: 50px;
+}
+
+.header-content-input button {
+  flex: 0.6;
+  width: 100%;
+  min-height: 50px;
+  background: #ff4b20;
+  border-radius: 0px 5px 5px 0px;
+  font-family: var(--font-family);
+  font-style: bold;
+  font-size: 20px;
+  line-height: 27px;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  padding: 0 1rem;
+  border: none;
+}
+.header-content-people {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 2rem;
+}
+.header-content-people img {
+  width: 181.79px;
+  height: 38px;
+}
+.header-content-people p {
+  margin: 0 0 0 1rem;
+  font-family: var(--font-family);
+  text-align: center;
+  font-weight: 500;
+  color: #fff;
+  line-height: 38px;
+  font-size: 12px;
+}
+
+.header-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header-image img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1050px) {
+  .header {
     flex-direction: column;
-    margin-right: 5rem;
+  }
+  .header-content {
+    margin: 0 0 3rem;
+  }
 }
-.header-content h1{
-    font-family: var(--font-family);
-    font-weight: 800;
-    font-size: 62px;
-    line-height: 75px;
-    letter-spacing: -0.04rem;
-}
-.header-content p{
-    font-size: 20px;
-    line-height: 27px;
-    font-family: var(--font-family);
-    margin-top: 1.5rem;
-    color: var(--color-text);
-}
-.header-content-input{
-    width: 100%;
-    margin: 2rem 0 1rem;
-    display: flex;
-}
-.header-content-input input{
-    background: var(--color-footer);
-    border-radius: 5px 0px 0px 5px;
-    font-family: var(--font-family);
-    font-size: 20px;
-    line-height: 27px;
-    /* color: var(--color-footer); */
-    border: 2px solid var(--color-footer);
-    padding: 0 1rem;
-    outline: none;
-    color: #fff;
-    flex: 2;
-    min-height: 50px;
+@media screen and (max-width: 650px) {
+  .header h1 {
+    font-size: 48px;
+    line-height: 60px;
+  }
+  .header p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .header-content-people {
+    flex-direction: column;
+  }
+  .header-content-people p {
+    margin: 0;
+  }
+
+  .header-content-input input,
+  .header-content-input button {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
-.header-content-input button{
-    flex: 0.6;
-    width: 100%;
-    min-height: 50px;
-    background: #FF4B20;
-    border-radius: 0px 5px 5px 0px;
-    font-family: var(--font-family);
-    font-style: bold;
-    font-size: 20px;
-    line-height: 27px;
-    color: #FFF;
-    cursor: pointer;
-    outline: none;
-    padding: 0 1rem;
-    border: none;
-}
-.header-content-people{
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 2rem;
-}
-.header-content-people img{
-    width: 181.79px;
-    height: 38px;
-}
-.header-content-people p{
-    margin: 0 0 0 1rem;
-    font-family: var(--font-family);
-    text-align: center;
-    font-weight: 500;
-    color: #FFF;
-    line-height: 38px;
+@media screen and (max-width: 490px) {
+  .header h1 {
+    font-size: 36px;
+    line-height: 48px;
+  }
+  .header p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .header-content-input input,
+  .header-content-input button {
     font-size: 12px;
-}
-
-.header-image{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.header-image img{
-    width: 100%;
-    height: 100%;
-}
-
-@media screen and (max-width:1050px) {
-    .header{
-        flex-direction: column;
-    }
-    .header-content{
-        margin: 0 0 3rem;
-    }
-}
-@media screen and (max-width:650px) {
-    .header h1{
-        font-size: 48px;
-        line-height: 60px;
-    }
-    .header p{
-        font-size: 16px;
-        line-height: 24px;
-    }
-    .header-content-people{
-        flex-direction: column;
-    }
-    .header-content-people p{
-        margin: 0;
-    }
-    
-    .header-content-input input,
-    .header-content-input button{
-        font-size: 16px;
-        line-height: 24px;
-    }
-}
-
-@media screen and (max-width:490px) {
-    .header h1{
-        font-size: 36px;
-        line-height: 48px;
-    }
-    .header p{
-        font-size: 14px;
-        line-height: 24px;
-    }
-    .header-content-input input,
-    .header-content-input button{
-        font-size: 12px;
-        line-height: 16px;
-    }
+    line-height: 16px;
+  }
 }
